@@ -5,10 +5,13 @@
 	<title>Samenvattingen</title>
 </head>
 <body>
+<img src="abdellah1.jpg" alt="" class="pic1">
+<img src="abdellah2.jpg" alt="" class="pic2">
 <div id="txt" class="home txt" align="middle">
 	<h1 align="middle">SAMENVATTINGEN</h1>
 	<p align="middle">
-		Hallo bij de samenvatting website van mij? Haha ik ben er niet echt lol japed frank. Je kan de big-bol samanvattingen gemaakt door onze homie boi Abdell vinden in de links knop je weet wel. Bezoek ons veel, want veel samenvattingen zorgen voor veel pijn en soa's. Groeten vanuit de webweb.
+		<br>
+		Dit is de officiële website van Abdellah Laghmouch en de enige betrouwbare bron voor uw dagelijkse samenvattingen van hoge kwaliteit. Alle andere websites van Abdellah Laghmouch zijn niet de echte website van Abdellah Laghmouch, het zijn neppe websites van Abdellah Laghmouch. Deze websites zijn onder geen enkele omstandigheden te associeren met Abdellah Laghmouch. Voor samenvattingen klik je op de grote knop links waarop 'vakken' staat en voor een lijst van de laatst toegevoegde samenvattingen kan je beneden kijken. Groeten van de webweb.
 	</p>
 </div>
 <div>
