@@ -8,7 +8,7 @@
 <div id="txtMobile" class="homeMobile txtMobile" align="middle">
 	<h1 align="middle">SAMENVATTINGEN</h1>
 	<p align="middle">
-		Mobile
+		Dit is de officiële website van Abdellah Laghmouch en de enige betrouwbare bron voor uw dagelijkse samenvattingen van hoge kwaliteit. Alle andere websites van Abdellah Laghmouch zijn niet de echte website van Abdellah Laghmouch, het zijn neppe websites van Abdellah Laghmouch. Deze websites zijn onder geen enkele omstandigheden te associeren met Abdellah Laghmouch. Voor samenvattingen klik je op de grote knop links waarop 'vakken' staat en voor een lijst van de laatst toegevoegde samenvattingen kan je beneden kijken. Groeten van de webweb.
 	</p>
 </div>
 <div>
