@@ -24,14 +24,26 @@ h1 {
 	text-decoration-line: underline;
 	font-weight: bold;
 }
+.pic1 {
+	position: absolute;
+	height: 45%;
+	margin-left: 1%;
+}
+.pic2 {
+	position: absolute;
+	margin-left: 81%; 
+	height: 45%;
+}
 .txt {
+	width: 60%;
 	margin-top: 3%;
+	margin-left: 20%;
+	margin-right: 20%;
+	font-size: 24px;
 }
 .home {
 	height: 45%;
-	border-radius: 3px;
-	margin-left: 3.35%;
-	margin-right: 3.35%;
+	border-radius: 5px;
 	margin-bottom: 1%;
 	background-color: lightgray;
 	border: 1px solid black;
@@ -42,14 +54,16 @@ h1 {
 .obj {
 	height: 35%;
 	margin-top: 3%;
+	margin-right: 3.35%;
+	margin-left: 3.35%;
 }
 .txtMobile {
 	margin-top: 5%;
-	font-size: 12px;
+	font-size: 15px;
 }
 .homeMobile {
 	height: 45%;
-	border-radius: 3px;
+	border-radius: 5px;
 	margin-left: 3.35%;
 	margin-right: 3.35%;
 	margin-bottom: 1%;
@@ -71,7 +85,7 @@ h1 {
 	position: absolute;
 	vertical-align: middle;
 	z-index: 1;
-	border-radius: 0px 3px 3px 0px;
+	border-radius: 0px 5px 5px 0px;
 	height: 100%;	
 	float: left;
 	width: 7%;
