@@ -1,3 +1,5 @@
+Laatst toegevoegde samenvattingen:
+
 22/02/18: Nieuwe samenvatting geschiedenis: Sociale strijd
 
 22/02/18: Nieuwe samenvatting aardrijkskunde: Aard
